--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
-.canvas{
-    width: 600px;
-    padding: 200px 20px;
-    text-align: center;
-    border: 1px solid rgb(141, 24, 24);
+span{
+    background: red;
+    display: inline-block;
+    padding: 10px;
+    color: #fff;
+    margin: 10px 0;
 }
 
-.red {
-    color: red;
+span.available {
+    background: blue;
+}
+
+.available span{
+    background: green;
+}
+
+.nearby span:after{
+    content: "nearby";
+    margin-left: 10px;
 }
