--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ span.available {
     background: green;
 }
 
-.nearby span:after{
+.nearby span::after{
     content: "nearby";
     margin-left: 10px;
 }
